--- a/appproject/codemon/templates/codemon/checklist_delete_complete.html
+++ b/appproject/codemon/templates/codemon/checklist_delete_complete.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>チェックリスト削除完了</h1>
 
 <div class="navigation-tabs">
   <a href="{% url 'codemon:systems_list' %}" class="tab">システム</a>
   <a href="{% url 'codemon:algorithms_list' %}" class="tab">アルゴリズム</a>
-  <a href="{% url 'codemon:checklist_list' %}" class="tab active">チェックリスト</a>
+  <a href="{% url 'codemon:checklist_selection' %}" class="tab active">チェックリスト</a>
   <a href="{% url 'accounts:student_home' %}" class="tab" id="account-tab">アカウント</a>
 </div>
 
@@ -37,7 +36,7 @@
     {% endif %}
   </div>
 
-  <div class="actions">
+  <div class="actions">  
     <a href="{% url 'codemon:checklist_list' %}" class="btn-primary">
       <i class="fas fa-list"></i>
       チェックリスト一覧へ戻る
@@ -49,11 +48,12 @@
 .navigation-tabs {
   display: flex;
   margin-bottom: 20px;
+  justify-content: center; /* 中央寄せ */
 }
 
 .tab {
-  padding: 10px 20px;
-  margin-right: 10px;
+  padding: 10px 30px;
+  margin-right: 20px;
   text-decoration: none;
   color: #333;
   border: 1px solid #ddd;
